Changed WDD130 name

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <a href="#">Personal Website</a>
   <a href="#">Personal Siteplan</a>
 </nav>
-<p> Omar Junior Osorio León - Wdd130</p>
+<p> Omar Junior Osorio León - WDD130</p>
     
 </body>
 </html>
