--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <h1>Lane Tours Site Plan</h1>
-    <h2>Omar Junior Osorio L.</h2>
+    <h2>Omar Junior Osorio León</h2>
     <h2>WDD 130-23</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
