--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -54,10 +54,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#f4f0bb]</td>
-        <td class="secondary">[#87c38f]</td>
-        <td class="accent1">[#da2c38]</td>
-        <td class="accent2">[#226f54]</td>
+        <td class="primary">#f4f0bb</td>
+        <td class="secondary">#87c38f</td>
+        <td class="accent1">#da2c38</td>
+        <td class="accent2">#226f54</td>
       </tr>
     </table>
 
