self-closing tag corrected

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -17,7 +17,7 @@
   </header>
   <main>
     <!-- ------------------------Steps 2-5------------------------------ -->
-    <hr />
+    <hr>
     <h2>Overview</h2>
     <h3>Purpose</h3>
     <p>Our purpose is to provide complete information about the activities that can be carried out with our company, and also to satisfy the needs of our clients, leading them to explore adventures that go beyond the ordinary, going beyond the traditional.</p>
@@ -27,12 +27,12 @@
     <p>Our projects are aimed at all those who are willing to adventure, regardless of age, from the youngest to the most risky. We create a family atmosphere so that they can spend more time as a family, and get out of the monotony.</p>
     <!-- change this -->
 
-    <hr />
+    <hr>
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="images/Lane-Tours_Logo.png" alt="Logo image" />
-    <hr />
+    <img src="images/Lane-Tours_Logo.png" alt="Logo image">
+    <hr>
     <h2>Style Guide</h2>
 
     <!-- ------------------------Steps 6-9------------------------------ -->
@@ -98,7 +98,7 @@
       <a href="#">Page2</a>
       <a href="#">Contact Us</a>
     </nav>
-    <hr />
+    <hr>
     <h2>Site Map</h2>
     <div class="sitemap">
       <div class="sm-home">Home</div>
@@ -112,13 +112,13 @@
       <div class="left">&nbsp;</div>
       <div class="right">&nbsp;</div>
     </div>
-    <hr />
+    <hr>
     <h2>Wireframes</h2>
     <!-- Create an additional wireframe for your site. List it here below the Home page wireframe. -->
 
     <h3>Home</h3>
 
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe">
 
     <h3>[Page 2]</h3>
 
