typing error fixed

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -43,7 +43,7 @@
         </section>
         <section class="rapids-card">
           <img class="card-img" src="/wwr/images/rapids.jpg" alt="Rafting boat">
-          <img claass="icon" src="/wwr/images/oars.png" alt="Oars icon">
+          <img class="icon" src="/wwr/images/oars.png" alt="Oars icon">
           <h2>rapids</h2>
         </section>
         <img class="mountains" src="/wwr/images/mountains.jpg" alt="Misty mountains">
