--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a id="logo_link" href="index.html">
-        <img class="logo" src="/wwr/images/logo.png" alt="Dry Oar Logo">
+        <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav>
           <a href="index.html">Home</a>
@@ -44,7 +44,7 @@
         <section class="rapids-card">
           <img class="card-img" src="/wwr/images/rapids.jpg" alt="Rafting boat">
           <img class="icon" src="/wwr/images/oars.png" alt="Oars icon">
-          <h2>rapids</h2>
+          <h2>Rapids</h2>
         </section>
         <img class="mountains" src="/wwr/images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
