--- a/wwr/index.html
+++ b/wwr/index.html
@@ -20,7 +20,7 @@
     </header>
       <div id="hero">
         <div id="hero-box">
-          <img id="hero-img" src="/wwr/images/hero.png" alt="People enjoying rafting">
+          <img id="hero-img" src="./images/hero.png" alt="People enjoying rafting">
         </div>
         <section id="hero-msg">
           <h1 class="home-title">Have An Adventure</h1>
@@ -32,21 +32,21 @@
       </div>
       <main class="home-grid">
         <section class="rivers-card">
-          <img class="card-img" src="/wwr/images/rivers.jpg" alt="River in forest">
-          <img class="icon" src="/wwr/images/river_icon.png" alt="River icon">
+          <img class="card-img" src="./images/rivers.jpg" alt="River in forest">
+          <img class="icon" src="./images/river_icon.png" alt="River icon">
           <h2>Rivers</h2>
         </section>
         <section class="camping-card">
-          <img class="card-img" src="/wwr/images/camping.jpg" alt="Tent in mountains">
-          <img class="icon" src="/wwr/images/fire_icon.png" alt="Fire icon">
+          <img class="card-img" src="./images/camping.jpg" alt="Tent in mountains">
+          <img class="icon" src="./images/fire_icon.png" alt="Fire icon">
           <h2>Camping</h2>
         </section>
         <section class="rapids-card">
-          <img class="card-img" src="/wwr/images/rapids.jpg" alt="Rafting boat">
-          <img class="icon" src="/wwr/images/oars.png" alt="Oars icon">
+          <img class="card-img" src="./images/rapids.jpg" alt="Rafting boat">
+          <img class="icon" src="./images/oars.png" alt="Oars icon">
           <h2>Rapids</h2>
         </section>
-        <img class="mountains" src="/wwr/images/mountains.jpg" alt="Misty mountains">
+        <img class="mountains" src="./images/mountains.jpg" alt="Misty mountains">
         <section class="msg">
           <h2>More Than Just The Trill</h2>
           <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors.</p>
@@ -59,13 +59,13 @@
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
           <a href="https://facebook.com">
-            <img src="/wwr/images/facebook.png" alt="fb icon">
+            <img src="./images/facebook.png" alt="fb icon">
           </a>
           <a href="https://twitter.com">
-            <img src="/wwr/images/twitter.png" alt="twitter icon">
+            <img src="./images/twitter.png" alt="twitter icon">
           </a>
           <a href="https://instagram.com">
-            <img src="/wwr/images/instagram.png" alt="instagram icon">
+            <img src="./images/instagram.png" alt="instagram icon">
           </a>
         </div>
       </footer>
