--- a/aboutme/index.html
+++ b/aboutme/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>About Me</h1>
-    <img src="/aboutme/images/Family.jpeg" alt="My Eternal Family" style="width:400px;height:500px;">
+    <img src="./images/Family.jpeg" alt="My Eternal Family" style="width:400px;height:500px;">
     <h2>Omar Junior Osorio</h2>
     <p>People used to call me only "Omar", but I don't dislike my second name "Junior".</p>
     <p>I'm coursing an Applied Technology BS, and I'm really enjoying it.
