--- a/practice/exercises.html
+++ b/practice/exercises.html
@@ -1,27 +1,25 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
     <title>BYUI</title>
-  </head>THIS IS GONNA BE NICE
-  <body>
-    <header>How many emotions do you feel?
+    <link rel="stylesheet" href="styles/styles.css">
+</head>
+<body>
+    <header>
         <nav>
-          <a href="byui.html">Home</a>
-          <a href="https://www.churchofjesuschrist.org">Church of Jesus Christ</a>
-          <a href="https://www.churchofjesuschrist.org/temples">Temples</a>
-          <a href="https://www.churchofjesuschrist.org/study/scriptures">Scriptures</a>
+            <a id="active" href="byui.html">Home</a>
+            <a href="https://www.churchofjesuschrist.org">Church of Jesus Christ</a>
+            <a href="https://www.churchofjesuschrist.org/temples">Temples</a>
+            <a href="https://www.churchofjesuschrist.org/study/scriptures">Scriptures</a>
         </nav>
     </header>
     <main>
-      <h1>Brigham Young University Idaho</h1>
-      <img
-      src="https://www.byui.edu/images/service-sites/map-banner.jpg"
-      alt="BYUI Campus"
-      />
-      <p>BYU-Idaho is a comfortable place to learn and grow as a disciple of Jesus Christ, and it only happens if you love Him.</p>
+        <h1>Brigham Young University Idaho</h1>
+        <img src="https://www.byui.edu/images/service-sites/map-banner.jpg">
+        <p>BYU-Idaho is a comfortable place to learn and grow as a disciple of Jesus Christ because students, faculty, and employees share a commitment to live the gospel.</p>
     </main>
     <footer>
-      <p>My Web Page 2022</p>
+        <p>My Web Page 20XX &copy</p>
     </footer>
-  </body>
+</body>
 </html>
