--- a/askus/site-plan.html
+++ b/askus/site-plan.html
@@ -51,7 +51,7 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th><th>Accent 3</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#2081c3]</td><td class="secondary">[#63d2ff]</td><td class="accent1">[#78d5d7]</td><td class="accent2">[#bed8d4]</td><td class="accent3">[#f7f9f9]</td></tr>
+        <tr><td class="primary">#2081c3</td><td class="secondary">#63d2ff</td><td class="accent1">#78d5d7</td><td class="accent2">#bed8d4</td><td class="accent3">#f7f9f9</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
