Page_2_Rafting added

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -11,11 +11,11 @@
     <div id="content">
     <header>
         <a id="logo_link" href="index.html">
-        <img class="logo" src="images/logo.png" alt="Dry Oar Logo">
+        <img class="logo" src="images/Lane-Tours_Logo.png" alt="Lane Tours Logo">
         </a>
         <nav>
           <a href="index.html">Home</a>
-          <a href="#">Page 2</a>
+          <a href="rivers.html">Rivers</a>
           <a href="site-plan-rafting.html">Site Plan</a>
           <a href="contactus.html">Contact Us</a>
         </nav>
@@ -26,7 +26,7 @@
         </div>
         <section id="hero-msg">
           <h1 class="home-title">Have An Adventure</h1>
-          <h4>Make Memories with Dry Oar</h4>
+          <h4>Make Memories with Lane Tours</h4>
           <div class="button-box">
               <a class="book" href="contactus.html">Book Now</a>
           </div>
