--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
   <a href="positioning.html">Positioning Activity</a>
   <a href="#">Personal Website</a>
-  <a href="#">Personal Siteplan</a>
+  <a href="askus/site-plan.html">Personal Siteplan</a>
   </nav>
   <p>Omar Junior Osorio León - WDD130</p>
 </body>
