--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -26,6 +26,8 @@
             </div>
             <section id="hero-msg">
             <h1 class="rivers-title">Live Pure Adrenaline</h1>
+            <div class="button-box">
+                <a class="book" href="contactus.html">Book Now</a>
             </div>
             </section>
         </div>
@@ -57,9 +59,7 @@
                     <h2 class="subtitles3">Grand Canyon, Arizona</h2>
                     <p class="text3">The Colorado River is a powerful master of the Rafting discipline. For lovers of this beautiful sport, solid type 4 "whitewater" skills and reliable rocking on the river are a must. In addition, it is not necessary to mention the infinite desire for adventure and adrenaline that such a beautiful river can give.<br>
 
-                        The beautiful walls of the Grand Canyon, impetuous and full of beautiful rocks made by the Hand of the Perfect Master, will give you an incredible and rarely experienced adventure. Even if you don't have Rafting skills, you are welcome to join these rafting adventures. The security provided by our company allows the accompanying guides to offer their experience while our adventurers enjoy the warm and calm air that is only interrupted by the sound of the rapids.<br>
-                        
-                        Beautiful landscapes, the sunset over the Canyon, calm waters will also be the reason to get away from everyday life, and you can even clear your soul and mind with yoga classes that are available in safe caverns adapted for your comfort, tranquility and security.</p>
+                        The beautiful walls of the Grand Canyon, impetuous and full of beautiful rocks made by the Hand of the Perfect Master, will give you an incredible and rarely experienced adventure. Even if you don't have Rafting skills, you are welcome to join these rafting adventures. The security provided by our company allows the accompanying guides to offer their experience while our adventurers enjoy the warm and calm air that is only interrupted by the sound of the rapids.</p>
                     </section>
             </div>
         </main>
