Personal_Wireframes added

--- a/askus/site-plan.html
+++ b/askus/site-plan.html
@@ -144,6 +144,7 @@
       <p>Images for the Page 2</p>
         <img src="images/Picture_by_asap_rocky_on_unsplash.jpg" alt="Reflex Image" style="width: 1000px; height: 600px;">
         <img src="images/Picture_by_patrick_fore_on_unsplash.jpg" alt="Studying Image" style="width: 1000px; height: 600px;">
+        <img src="images/rsz_image_by_jcomp_on_freepik.jpg" alt="Praying Image" style="width: 1000px; height: 600px;">
 
       </ul>
       <h3>About Us</h3>
@@ -167,21 +168,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        Fixed bar on the left with the logo and navigation Home Menu.
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Home_Wireframe.svg" alt="Home Page Wireframe" style="width: 1200px; height: 600px;">
 
-      <h3>[Page 2]</h3>
+      <h3>Why AskUs?</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        Fixed bar on the left and footer like the Home Page. Hero image with a Slideshow.
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Wireframe_Page_2.svg" alt="Why AskUs? Wireframe" style="width: 1200px; height: 600px;">
 
-      <h3>[Page 3]</h3>
+      <h3>About Us</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Fixed bar on the left and footer like the Home Page.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/Wireframe_Page_3.svg" alt="About Us Wireframe" style="width: 1200px; height: 600px;">
     </main>
   </body>
 
