--- a/askus/site-plan.html
+++ b/askus/site-plan.html
@@ -87,9 +87,10 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Why Ask Us?</a>
-        <a href="#">About Us</a>
+        <a href="index.html">Home</a>
+        <a href="why-ask-us.html">Why Ask Us?</a>
+        <a href="about-us.html">About Us</a>
+        <a href="contact-us.html">Contact Us</a>
       </nav>
       <hr>
       <h2>
