--- a/askus/index.html
+++ b/askus/index.html
@@ -42,6 +42,7 @@
     </div>
     <footer>
         <p>Ask Us &copy; 2022 - Omar Osorio</p>
+        <p><a href="site-plan.html">Site Plan</a></p>
         <div class="social">
         <a href="https://facebook.com" target="_blank">
             <img src="images/logo_facebook.png" alt="fb icon">
