--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="wwr/index.css">
     <title>WDD130 Home Page</title>
 </head>
 <body>
-  <h1>Welcome to WDD130 Web Projects</h1>
-  <nav>
-  <a href="aboutme/index.html">About Me Page</a>             
-  <a href="wwr/index.html">White Water Rafting Website</a>
-  <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
-  <a href="positioning.html">Positioning Activity</a>
-  <a href="#">Personal Website</a>
-  <a href="askus/site-plan.html">Personal Siteplan</a>
-  </nav>
-  <p>Omar Junior Osorio León - WDD130</p>
+  <div class="sidenav">
+      <a href="aboutme/index.html">About Me Page</a>             
+      <a href="wwr/index.html">White Water Rafting Website</a>
+      <a href="wwr/site-plan-rafting.html">White Water Rafting Siteplan</a>
+      <a href="positioning.html">Positioning Activity</a>
+      <a href="askus/index.html">Personal Website</a>
+      <a href="askus/site-plan.html">Personal Siteplan</a>
+  </div>
+  <h1 class="title">Welcome to WDD130 Web Projects</h1>
+  <p class="name">Omar Junior Osorio León - WDD130</p>
 </body>
 </html>
