--- a/askus/about-us.html
+++ b/askus/about-us.html
@@ -13,8 +13,6 @@
         <a href="index.html">Home</a>
         <a href="why-ask-us.html">Why Ask Us?</a>
         <a href="about-us.html">About Us</a>
-        <a href="contact-us.html">Contact us</a>
-        <a href="site-plan.html">Site Plan</a>
     </div>
       
       <!-- Page content -->
@@ -32,6 +30,7 @@
     </div>
     <footer>
         <p>Ask Us &copy; 2022 - Omar Osorio</p>
+        <p><a href="site-plan.html">Site Plan</a></p>
         <div class="social">
         <a href="https://facebook.com" target="_blank">
             <img src="images/logo_facebook.png" alt="fb icon">
