Home_Page added

--- a/askus/site-plan.html
+++ b/askus/site-plan.html
@@ -128,7 +128,7 @@
       <p>
         “When science reaches the top of the mountain, it will see that God was always there waiting for it” Anonymous
         Throughout history, human beings have always wanted answers to the unknowns that arise in life. Going beyond the ordinary knowledge of things has led him to discover effective methods and ways to solve many of these questions. The invention is given by curiosity and the response to need.
-        Whether you're a child, youth, or adult, this is the place to find answers to your Gospel questions, no matter how simple they may seem.
+        Whether you're a child, youth, or adult, this is the place to find answers to your Gospel questions, no matter how simple they may seem. We invite you to open your mind and venture to know the points of view of the leaders of the Church of Jesus Christ of Latter-day Saints, based on specific data extracted directly from the scriptures. Likewise, after you explore, read, analyze and meditate on things in your heart, pray to God the Father, who will give you the answers you need if you do it with real intention.
       </p>
       <p>Images for the Home page</p>
         <img src="images/Image by TodoFondos_net.jpg" alt="Hero Image" style="width: 1000px; height: 600px;">
