--- a/askus/site-plan.html
+++ b/askus/site-plan.html
@@ -130,7 +130,7 @@
         Whether you're a child, youth, or adult, this is the place to find answers to your Gospel questions, no matter how simple they may seem. We invite you to open your mind and venture to know the points of view of the leaders of the Church of Jesus Christ of Latter-day Saints, based on specific data extracted directly from the scriptures. Likewise, after you explore, read, analyze and meditate on things in your heart, pray to God the Father, who will give you the answers you need if you do it with real intention.
       </p>
       <p>Images for the Home page</p>
-        <img src="images/Image by TodoFondos_net.jpg" alt="Hero Image" style="width: 1000px; height: 600px;">
+        <img src="images/Image_by_TodoFondos_net.jpg" alt="Hero Image" style="width: 1000px; height: 600px;">
         <img src="images/Picture_by_samantha_sophia_on_unsplash.jpg" alt="Child reading image" style="width: 1000px; height: 600px;">
 
       </ul>
