html and css checked

--- a/askus/about-us.html
+++ b/askus/about-us.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="sidenav">
-        <img class="logo" src="images/AskUs_logo_no letters.svg" alt="Ask Us logo">
+        <img class="logo" src="images/AskUs_logo_no_letters.svg" alt="Ask Us logo">
         <a href="index.html">Home</a>
         <a href="why-ask-us.html">Why Ask Us?</a>
         <a href="about-us.html">About Us</a>
@@ -28,18 +28,18 @@
             </p>
         </div>
     </div>
-    <footer>
-        <p>Ask Us &copy; 2022 - Omar Osorio</p>
-        <p><a href="site-plan.html">Site Plan</a></p>
+    <footer class="contact">
+        <p class="owner">Ask Us &copy; 2022 - Omar Osorio</p>
+        <p class="link"><a href="site-plan.html">Site Plan</a></p>
         <div class="social">
         <a href="https://facebook.com" target="_blank">
-            <img src="images/logo_facebook.png" alt="fb icon">
+            <img src="images/logo_facebook.png" alt="fb icon" class="fb">
         </a>
         <a href="https://twitter.com" target="_blank">
-            <img src="images/twitter-round-logo-png-transparent.png" alt="twitter icon">
+            <img src="images/twitter-logo_2.png" alt="twitter icon" class="tw">
         </a>
         <a href="https://instagram.com" target="_blank">
-            <img src="images/logo-instagra-png-transparent.png" alt="instagram icon">
+            <img src="images/Round-Instagram-Logo-Transparent-Free-PNG.png" alt="instagram icon" class="inst">
         </a>
         </div>
     </footer>
