Child Page Added

--- a/askus/about-us.html
+++ b/askus/about-us.html
@@ -16,18 +16,18 @@
     </div>
       
       <!-- Page content -->
-    <div class="main">
+    <main>
         <div class="us-grid">
-            <h1>About us</h1>
-            <img class="Christ" src="images/Image_by_wirestocka_on_freepik.jpg" alt="Come follow me img">
-            <p class="text1">We are a group of members of the Church of Jesus Christ of Latter-day Saints, who began to meet with the objective of discussing certain frequently asked questions that some people have regarding Jesus Christ, the Creation, and the premortal life, among others. Other themes. With the aim of allowing people to find the answer to many questions in a documented way, we decided to organize a place to archive our contributions, our study, and all the research we can carry out. The Holy Bible assures us that “The Spirit of Truth will guide us into all truth” (John 16:13). Is it that we already know all the truth? Or is it that we reject the guidance of the Holy Spirit?<br>
+            <img src="images/Image_by_wirestocka_on_freepik.jpg" alt="Come follow me img" class="left-img1">
+            <h1 class="subtitleus">About us</h1>
+            <p class="textus1">We are a group of members of the Church of Jesus Christ of Latter-day Saints, who began to meet with the objective of discussing certain frequently asked questions that some people have regarding Jesus Christ, the Creation, and the premortal life, among others. Other themes. With the aim of allowing people to find the answer to many questions in a documented way, we decided to organize a place to archive our contributions, our study, and all the research we can carry out. The Holy Bible assures us that “The Spirit of Truth will guide us into all truth” (John 16:13). Is it that we already know all the truth? Or is it that we reject the guidance of the Holy Spirit?<br>
             </p>
             
-            <img class="Christ" src="images/Picture_by_jeremy_bishop_on_unsplash.jpg" alt="Ask img">
-            <p class="text2">We do not seek to divide, but rather the unity of all men under the only lineage that unites us, and we do not want to generate any kind of hatred or resentment for our beliefs, highlighting two of the principles in which we believe, by highlighting the respect we feel by Revelation when we teach that “We believe all that God has revealed, all that he presently reveals, and we believe will yet reveal many great and important matters pertaining to the Kingdom of God” (Art. of Faith: 9), and in respect towards the beliefs of others by proclaiming that "We claim the right to worship Almighty God according to the dictates of our own conscience, and grant to all men the same privilege: Let them worship how, where, or what they please" (Art. of faith: 11).<br>
+            <img src="images/Picture_by_jeremy_bishop_on_unsplash.jpg" alt="Ask img" class="right-img">
+            <p class="textus2">We do not seek to divide, but rather the unity of all men under the only lineage that unites us, and we do not want to generate any kind of hatred or resentment for our beliefs, highlighting two of the principles in which we believe, by highlighting the respect we feel by Revelation when we teach that “We believe all that God has revealed, all that he presently reveals, and we believe will yet reveal many great and important matters pertaining to the Kingdom of God” (Art. of Faith: 9), and in respect towards the beliefs of others by proclaiming that "We claim the right to worship Almighty God according to the dictates of our own conscience, and grant to all men the same privilege: Let them worship how, where, or what they please" (Art. of faith: 11).<br>
             </p>
         </div>
-    </div>
+    </main>
     <footer class="contact">
         <p class="owner">Ask Us &copy; 2022 - Omar Osorio</p>
         <p class="link"><a href="site-plan.html">Site Plan</a></p>
