--- a/askus/why-ask-us.html
+++ b/askus/why-ask-us.html
@@ -10,9 +10,9 @@
 <body>
     <div class="sidenav">
         <img class="logo" src="images/AskUs_logo_no_letters.svg" alt="Ask Us logo">
-        <a href="index.html">Home</a>
-        <a href="why-ask-us.html">Why Ask Us?</a>
-        <a href="about-us.html">About Us</a>
+        <a href="index.html" class="index">Home</a>
+        <a href="why-ask-us.html" class="why">Why Ask Us?</a>
+        <a href="about-us.html" class="us">About Us</a>
     </div>
       
       <!-- Page content -->
